--- a/lp01.md
+++ b/lp01.md
@@ -1,4 +1,5 @@
 # Larry Plotter y El Bucle Filosofal
 
 
-Larry es un niño huérfano
+Larry es un niño huérfano que vive con sus tíos y tiene una cicatriz
+en la frente con forma de USB
