--- a/lp05.md
+++ b/lp05.md
@@ -1,3 +1,3 @@
 # Larry Plotter y la orden de Unix
 
-El codigo de Larry se vuelve cada vez más peligroso
+Larry desarrolla sus habilidades y su código se vuelve cada vez más peligroso
